env/kubernetes/frontend/frontend-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: frontend-port
      port: 4200
      targetPort: 4200
