env/kubernetes/frontend/frontend-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-loadbalancer
  labels:
    name: frontend-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: frontend-port
      port: 4200
      targetPort: 4200
