env/kubernetes/frontend/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    name: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
    id: "o"
  ports:
    - port: 4200
      name: frontend-port
      protocol: TCP
